--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/flutter_logo.png":["assets/images/flutter_logo.png","assets/images/2.0x/flutter_logo.png","assets/images/3.0x/flutter_logo.png"]}
+{"assets/images/64.png":["assets/images/64.png"],"assets/images/ic_launcher.png":["assets/images/ic_launcher.png"],"assets/images/playstore.png":["assets/images/playstore.png"]}
